# controllers/users/addSeller.js
@@ -2,11 +2,18 @@ import mysql from "mysql"
 
 export const addSeller = async (req, res) => {
     const name  = req.body.myName
-    const post_title = req.body.title
+    const phone_num = req.body.MyProfile.phone_num
+    const account = req.body.MyProfile.account
+    const password = req.body.MyProfile.password
+    const real_name = req.body.realName
+    const address = req.body.address
+
     /* #swagger.tags = ['Users']
     #swagger.description = 'Become a seller and add information' */
-    var query = `INSERT INTO TRACK (track_item_id, track_user_name) VALUES ( ? , ?);`;
-    var query_2 = `SELECT * FROM ITEM JOIN POST ON item_post_title = post_title WHERE post_title = ?`
+    var query = `
+    INSERT INTO SELLER (seller_name, real_name, phone_num, account, password, address) VALUES (? ,? ,? ,? ,? ,?);
+    UPDATE USER SET role = 'seller' WHERE user_name = ? ;
+    `;
 
     var db = mysql.createConnection({
         // Change it to the public IP generated by ngrok
@@ -18,17 +25,16 @@ export const addSeller = async (req, res) => {
         multipleStatements: true
     })
 
-    db.connect();
-
-    db.query(query_2, [post_title], (err, rows)=>{
-      if (err) throw err;
-      // console.log(rows);
-      db.query(query, [rows[0].item_id.toString(), name], (err, rows_b) => {
-        if (err) throw err
-        // console.log(`SQL query: ${query}`)
-        return res.status(200).json({message: "success!"});
-      });    
-    })
-
+    db.query(query, [name, real_name, phone_num, account, password, address, name], (err, rows) => {
+      if (err) throw err
+      // console.log(`SQL query: ${query}`)
+      const data = {
+        phone_num : phone_num,
+        account : account,
+        password : password,
+        role : 'seller'
+      }
+      return res.status(200).json({profile: data});
+    });   
     // db.end();
 }
